# Renters-Rights-Act-Assistant

./: .gitignore  125.md  README.md  constants.py  main.py  pyproject.toml
Renters_Rights/: RAG.py
Renters_Rights/tests/: conftest.py  test_RAG.py  test_main.py
