[project]
name = "vzlotn-ae-2-5"
version = "0.1.0"
description = "UK Renters Rights Act Chatbot"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gradio>=6.5.1",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
]
